tests/ok/vector-generic-root-param.ari
fn length_of[T](values: Vec[T]) -> i64 {
  return len(values);
}

fn main() -> i64 {
  let three: Vec[i64] = [1, 2, 3];
  let two: Vec[i64] = [4, 5];
  return length_of(three) + length_of(two);
}
