tests/errors/vector-function-param-runtime-abi.ari
fn sum(values: Vec[i64]) -> i64 {
  return len(values);
}

fn main() -> i64 {
  let values: Vec[i64] = [1, 2, 3];
  return sum(values);
}
